--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,7 +127,8 @@ jobs:
   # TODO: Maybe some of these should be allowed to fail? If so, I guess we can add back the "unofficial" MSRV,
   # I would also put android there.
   #
-  # TODO: Run fmt for some of these as well, perhaps?
+  # TODO: Run fmt for some of these as well, perhaps? I guess what I'm thinking is that each job will have a "support"
+  # level (or array of checks?), which determines what checks are run. We can document this as well.
   unsupported-check:
     needs: pre-job
     strategy:
@@ -211,7 +212,7 @@ jobs:
               os: "ubuntu-latest",
               target: "loongarch64-unknown-linux-gnu",
               cross: true,
-              cross-version: "git:154b4ead7e639c7597d9e4e626b9c1c1e37608c0",
+              cross-version: "git:588b3c99db52b5a9c5906fab96cfadcf1bde7863",
             }
 
           # Android ARM64
@@ -219,7 +220,7 @@ jobs:
               os: "ubuntu-latest",
               target: "aarch64-linux-android",
               cross: true,
-              cross-version: "git:154b4ead7e639c7597d9e4e626b9c1c1e37608c0",
+              cross-version: "git:588b3c99db52b5a9c5906fab96cfadcf1bde7863",
               no-default-features: true,
               no-clippy: true,
             }
@@ -237,6 +238,7 @@ jobs:
               os: "ubuntu-latest",
               target: "x86_64-unknown-freebsd",
               cross: true,
+              cross-version: "git:588b3c99db52b5a9c5906fab96cfadcf1bde7863",
             }
 
           # NetBSD
@@ -244,6 +246,7 @@ jobs:
               os: "ubuntu-latest",
               target: "x86_64-unknown-netbsd",
               cross: true,
+              cross-version: "git:588b3c99db52b5a9c5906fab96cfadcf1bde7863",
             }
     runs-on: ${{ matrix.info.os }}
     if: ${{ needs.pre-job.outputs.should_skip != 'true' }}
@@ -291,6 +294,8 @@ jobs:
           args: --all-targets --workspace --target=${{ matrix.info.target }} --locked --no-default-features
           use-cross: ${{ matrix.info.cross }}
           cross-version: ${{ matrix.info.cross-version || '0.2.5' }}
+
+        # TODO: Run tests? Maybe skip some tests though.
 
   # # Check BSD platforms using a VM layer.
   # check-bsd-vm:
