--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
           - {
               os: "ubuntu-latest",
               target: "aarch64-unknown-linux-gnu",
-              cross: true,
+              cross: false,
             }
           - { os: "macos-15", target: "x86_64-apple-darwin", cross: false }
           - { os: "macos-15", target: "aarch64-apple-darwin", cross: false }
