also use ubuntu-24.04 everywhere

--- a/.github/workflows/bsd_vm_check.yml
+++ b/.github/workflows/bsd_vm_check.yml
@@ -23,7 +23,7 @@ env:
 
 jobs:
   bsd-vm-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 20
     steps:
       - name: Checkout repository
