--- a/.github/workflows/clear_workflow_cache.yml
+++ b/.github/workflows/clear_workflow_cache.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   clear-cache:
     if: ${{ github.event_name != 'pull_request' || ! github.event.pull_request.head.repo.fork }} # If it is a PR, only if not a fork
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
