--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -23,7 +23,7 @@ env:
 jobs:
   initialize:
     name: initialize
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     outputs:
       version: ${{ env.VERSION }}
     steps:
@@ -51,7 +51,7 @@ jobs:
   generate-choco:
     needs: [initialize, build-release]
     name: "Generate Chocolatey files"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
@@ -92,7 +92,7 @@ jobs:
 
   upload-release:
     name: upload-release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: [initialize, generate-choco, build-release]
     steps:
       - name: Set release version
