--- a/.github/workflows/test_docs.yml
+++ b/.github/workflows/test_docs.yml
@@ -12,7 +12,7 @@ concurrency:
 
 jobs:
   pre-job:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     outputs:
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
     steps:
@@ -27,7 +27,7 @@ jobs:
     name: Test building docs
     needs: pre-job
     if: ${{ needs.pre-job.outputs.should_skip != 'true' }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout repository
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
