--- a/.github/workflows/build_releases.yml
+++ b/.github/workflows/build_releases.yml
@@ -6,6 +6,8 @@
 # - .deb releases
 # - .rpm releases
 #
+# Note that for musl targets, we use cross to avoid having to set up the dependencies for musl.
+#
 # TODO: Break this up into scripts instead.
 # TODO: Trigger this in CI as well if this file changes, so I don't have to spam nightly builds.
 
@@ -47,8 +49,6 @@ jobs:
         info:
           # ======= Supported targets =======
           # Linux (x86-64, x86, aarch64)
-          #
-          # TODO: In the future, when ARM runners are available on github, switch ARM targets off of cross.
           - {
               target: "x86_64-unknown-linux-gnu",
               os: "ubuntu-22.04",
@@ -72,8 +72,8 @@ jobs:
             }
           - {
               target: "aarch64-unknown-linux-gnu",
-              os: "ubuntu-22.04",
-              cross: true,
+              os: "ubuntu-22.04-arm",
+              cross: false,
             }
           - {
               target: "aarch64-unknown-linux-musl",
@@ -132,7 +132,7 @@ jobs:
           # Android
           - {
               target: "aarch64-linux-android",
-              os: "ubuntu-latest",
+              os: "ubuntu-24.04",
               cross: true,
               no-default-features: true,
             }
@@ -389,7 +389,7 @@ jobs:
 
   build-cirrus:
     name: "Build using Cirrus CI"
-    runs-on: "ubuntu-latest"
+    runs-on: "ubuntu-24.04"
     timeout-minutes: 12
     steps:
       - name: Checkout repository
@@ -427,17 +427,25 @@ jobs:
 
   build-deb:
     name: "Build .deb software packages"
-    runs-on: "ubuntu-22.04"
+    runs-on: ${{ matrix.info.os || 'ubuntu-24.04' }}
     timeout-minutes: 12
     strategy:
       fail-fast: false
       matrix:
-        # TODO: In the future, when ARM runners are available on github, switch ARM targets off of cross.
         info:
           - { target: "x86_64-unknown-linux-gnu", dpkg: amd64 }
           - { target: "x86_64-unknown-linux-musl", cross: true, dpkg: amd64 }
           - {
               target: "aarch64-unknown-linux-gnu",
+              cross: false,
+              dpkg: arm64,
+              os: "ubuntu-22.04-arm",
+            }
+          # The cross images don't work with ARM runners, unfortunately. We could build it on x86 with cross
+          # and then copy it over to an ARM runner but that's kind of annoying, so I'll skip this for now.
+          # TODO: Maybe improve how we do the .deb software building step?
+          - {
+              target: "aarch64-unknown-linux-musl",
               cross: true,
               dpkg: arm64,
               container: "ghcr.io/clementtsang/cargo-deb-aarch64-unknown-linux-gnu",
@@ -447,12 +455,6 @@ jobs:
               cross: true,
               dpkg: armhf,
               container: "ghcr.io/clementtsang/cargo-deb-armv7-unknown-linux-gnueabihf",
-            }
-          - {
-              target: "aarch64-unknown-linux-musl",
-              cross: true,
-              dpkg: arm64,
-              container: "ghcr.io/clementtsang/cargo-deb-aarch64-unknown-linux-gnu",
             }
           - {
               target: "armv7-unknown-linux-musleabihf",
@@ -501,8 +503,8 @@ jobs:
         run: |
           gzip ./manpage/btm.1
 
-      - name: Build Debian release (x86-64)
-        if: startsWith(matrix.info.target, 'x86_64')
+      - name: Build Debian release (non-container)
+        if: ${{ matrix.info.container == '' }}
         env:
           BTM_GENERATE: true
         run: |
@@ -510,8 +512,8 @@ jobs:
           cargo deb --no-build --target ${{ matrix.info.target }}
           cp ./target/debian/bottom_*.deb .
 
-      - name: Build Debian release (ARM)
-        if: startsWith(matrix.info.target, 'x86_64') != true
+      - name: Build Debian release (container)
+        if: ${{ matrix.info.container != '' }}
         env:
           BTM_GENERATE: true
         run: |
@@ -562,7 +564,7 @@ jobs:
 
   build-rpm:
     name: "Build .rpm software packages"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     container: ghcr.io/clementtsang/almalinux-8
     timeout-minutes: 12
     strategy:
